fixed center align

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -3,6 +3,7 @@
 .home {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding-top: 40px;
 
   &__banner-container {
